--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
-    <title>Projeto Phone</title>
+    <title>Projeto-Phone</title>
 </head>
 <body>
     <section class="container-left">
@@ -23,7 +23,7 @@
             <a class="link-header">About</a>
             <a class="link-header">Contact</a>
         </header>
-        <img src="./img-phone.png">
+        <img src="./imag-phone.png">
 </section>
 </body>
 </html>
